--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,17 +3,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "30.0.3"
-
-
-    ndkVersion '21.3.6528147'
-
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.vivek.filemanager"
-        minSdkVersion 17
-        targetSdk 33
+        minSdkVersion 24
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -59,4 +54,9 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
     implementation 'com.jaredrummler:android-processes:1.0.3'
 
+
+    def room_version = "2.4.0"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
