--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         tools:ignore="ProtectedPermissions" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -24,7 +25,7 @@
             android:name="com.yugi.filemanager.SelectFileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.yugi.filemanager.SplashActivity"
+            android:name="com.yugi.filemanager.view.SplashActivity"
             android:screenOrientation="portrait" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,7 +34,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.yugi.filemanager.MainActivity"
+            android:name="com.yugi.filemanager.view.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.yugi.filemanager.view.ViewFileAct"
             android:screenOrientation="portrait" />
 
         <provider
